--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
   <h1>Hello, I am Chiazam Iheme</h1>
-  <p>A passionate DevOps Engineer.</p>
+  <p>DevOps Engineer.</p>
 </body>
 </html>
